--- a/productService/build.gradle
+++ b/productService/build.gradle
@@ -42,6 +42,12 @@ dependencies {
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
     testImplementation 'org.mockito:mockito-core'
     testImplementation 'org.mockito:mockito-junit-jupiter'
+    testImplementation "org.testcontainers:testcontainers:1.20.0"
+    testImplementation "org.testcontainers:postgresql:1.20.0"
+    testImplementation "org.testcontainers:junit-jupiter:1.20.0"
+
+
+
     //	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
     //	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
     //	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
