Task-10: add docker, add search-service project

--- a/productService/build.gradle
+++ b/productService/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     testImplementation "org.testcontainers:testcontainers:1.20.0"
     testImplementation "org.testcontainers:postgresql:1.20.0"
     testImplementation "org.testcontainers:junit-jupiter:1.20.0"
+    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.1.0'
 
 
 
