Task-14: update java version, update intial sql file

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 HELP.md
 .gradle
+.env
+.graflew
 build/
-.idea/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+.idea/
 
 ### STS ###
 .apt_generated
