--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -2,9 +2,7 @@ spring.application.name=productService
 
 # Context path
 server.port=8080
-
-# graphql
-spring.graphql.graphiql.enabled=true
+server.servlet.context-path=/productService
 
 # Logging
 logging.level.root=INFO
@@ -27,7 +25,4 @@ spring.flyway.locations=classpath:db/migration
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-
-# Apollo
-appolo.link=https://studio.apollographql.com/
 
