--- a/search_server/build.gradle
+++ b/search_server/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.flywaydb:flyway-database-postgresql'
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
+	implementation 'org.apache.commons:commons-text:1.12.0'
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'org.postgresql:postgresql:42.2.20'
 	compileOnly 'org.projectlombok:lombok'
