--- a/search_server/build.gradle
+++ b/search_server/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 	implementation 'org.apache.commons:commons-text:1.12.0'
+	implementation 'commons-codec:commons-codec:1.17.1'
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'org.postgresql:postgresql:42.2.20'
 	compileOnly 'org.projectlombok:lombok'
