--- a/product_server/docker-compose.yaml
+++ b/product_server/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
     container_name: postgres
     environment:
       POSTGRES_DB: product_service
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${admin}
     ports:
       - "5432:5432"
     volumes:
