--- a/product_server/src/main/resources/application.properties
+++ b/product_server/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
+# ActiveMQ
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user={ACTIVE_MQ_USER{}
+spring.activemq.password={ACTIVE_MQ_PASSWORD}
+
