--- a/search_server/src/main/resources/application.properties
+++ b/search_server/src/main/resources/application.properties
@@ -25,3 +25,11 @@ spring.flyway.locations=classpath:db/migration
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+
+# ActiveMQ
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user={ACTIVE_MQ_USER{}
+spring.activemq.password={ACTIVE_MQ_PASSWORD}
+
+## for test
+#spring.activemq.in-memory=true
