Task-23: fix bugs in Search flow - resolved issue with 0 search results

--- a/search_server/src/main/resources/application.properties
+++ b/search_server/src/main/resources/application.properties
@@ -8,8 +8,8 @@ server.servlet.context-path=/search-server
 logging.level.root=INFO
 logging.level.pl.dziadkouskaya.search_server=INFO
 logging.level.org.flywaydb=WARN
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 logging.level.org.springframework=INFO
 
 # Datasource
