--- a/product_server/src/main/resources/application.properties
+++ b/product_server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/productService
 
 # Logging
 logging.level.root=INFO
-logging.level.pl.dziadkouskaya.graphql=INFO
+logging.level.pl.dziadkouskaya.productMicroservice=INFO
 logging.level.org.flywaydb=WARN
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
